unpackaged/main/default/objects/Koala_Intent_Signal__c/Koala_Intent_Signal__c.object-meta.xml
<CustomObject>
    <label>Koala Intent Signal</label>
    <nameField>
        <label>Koala Intent Signal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Koala Intent Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>