unpackaged/main/default/objects/Koala_Intent_Signal__c/fields/Intent_Triggered_At__c.field-meta.xml
<CustomField>
    <fullName>Intent_Triggered_At__c</fullName>
    <label>Intent Triggered At</label>
    <type>DateTime</type>
</CustomField>