unpackaged/main/default/objects/Koala_Intent_Signal__c/fields/Koala_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Koala_Account_Name__c</fullName>
    <label>Koala Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>