unpackaged/main/default/objects/Koala_Intent_Signal__c/fields/Koala_Intent_Summary__c.field-meta.xml
<CustomField>
    <fullName>Koala_Intent_Summary__c</fullName>
    <label>Koala Intent Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>