unpackaged/main/default/objects/Koala_Intent_Signal__c/fields/Koala_Intent_Trigger_ID__c.field-meta.xml
<CustomField>
    <fullName>Koala_Intent_Trigger_ID__c</fullName>
    <externalId>true</externalId>
    <label>Koala Intent Trigger ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>