unpackaged/main/default/objects/Koala_Intent_Signal__c/fields/Koala_Intent_Type__c.field-meta.xml
<CustomField>
    <fullName>Koala_Intent_Type__c</fullName>
    <label>Koala Intent Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>