unpackaged/main/default/objects/Koala_Intent_Signal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intent_Triggered_At__c</columns>
    <columns>Koala_Account_Domain__c</columns>
    <columns>Koala_Account_Name__c</columns>
    <columns>Koala_Intent_Summary__c</columns>
    <columns>Koala_Intent_Type__c</columns>
    <columns>Koala_Visitor_Email__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>